--- a/jbake.properties
+++ b/jbake.properties
@@ -12,6 +12,6 @@ template.404Base.file=404Base.ftl
 
 template._content_eventsArchive.file=_content_eventsArchive.ftl
 
-canonicalBaseUrl=https://belgian-jug.github.io
+canonicalBaseUrl=https://bejug.github.io
 
 googleAnalyticsId: G-TODO
