Add direct URL to FOSDEM page

--- a/data/events.yml
+++ b/data/events.yml
@@ -19,7 +19,7 @@
   date: 2023-10-02
 
 - eventId: 20230205-fosdem
-  eventUrl: https://foojay.io/today/friends-of-openjdk-at-fosdem-2023
+  eventUrl: https://fosdem.org/2023/schedule/track/friends_of_openjdk/
   eventName: "Fosdem 2023"
   location: Brussels
   date: 2023-02-05
