--- a/data/events.yml
+++ b/data/events.yml
@@ -13,12 +13,12 @@
 # Order events by date descending
 
 - eventId: 20241105-bejug
-  eventName: "Secret"
-  eventUrl: https://www.meetup.com/belgian-java-user-group/events/
-  location: /
+  eventName: "\"Know your Java\" with Dr. Venkat Subramaniam"
+  eventUrl: https://www.meetup.com/belgian-java-user-group/events/304091973
+  location: HE2B - ESI - Ecole Supérieure d'Informatique
   date: 2024-11-05
   talks:
-    - title: "Not known yet"
+    - title: "Know your Java"
 
 - eventId: 20241026-bejug
   eventName: "Open Rewrite: A la carte"
