--- a/data/events.yml
+++ b/data/events.yml
@@ -15,7 +15,7 @@
 - eventId: 20241202-bejug
   eventName: "\"Java Evolutions\" with Badr Kacimi and Simon Ritter"
   eventUrl: https://www.meetup.com/belgian-java-user-group/events/304395041/
-  location: Colruyt, Zwijnaarde
+  location: Colruyt Group, Zwijnaarde
   date: 2024-12-02
   talks:
     - title: "Java Evolutions"
