--- a/data/events.yml
+++ b/data/events.yml
@@ -23,7 +23,7 @@
 - eventId: 20241105-bejug
   eventName: "\"Know your Java\" with Dr. Venkat Subramaniam"
   eventUrl: https://www.meetup.com/belgian-java-user-group/events/304091973
-  location: HE2B - ESI - Ecole Supérieure d'Informatique, Brussel
+  location: HE2B - ESI - Ecole Supérieure d'Informatique, Brussels
   date: 2024-11-05
   talks:
     - title: "Know your Java"
