--- a/data/events.yml
+++ b/data/events.yml
@@ -11,6 +11,17 @@
 #      presenters: (optional) Comma separated list of presenters.
 #
 # Order events by date descending
+- eventId: 20250619-bejug
+  eventName: "IntelliJ as a game engine + 1 more"
+  eventUrl: https://www.meetup.com/belgian-java-user-group/events/308208478/
+  location: Oniryx, Gembloux
+  date: 2025-06-19
+  talks:
+    - title: "IntelliJ as a game engine"
+      presenters: Alexander Chatzizacharias
+    - title: "Could be you!"
+
+
 - eventId: 20250523-bejug
   eventName: "INFORMAL - 30 Years of Java @ Bier Central (Antwerp)"
   eventUrl: https://www.meetup.com/belgian-java-user-group/events/307909476/
